--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -32,7 +32,7 @@ test:
 
 about:
   home: https://github.com/python-versioneer/python-versioneer
-  license: Public Domain
+  license: LicenseRef-Public-Domain
   summary: Easy VCS-based management of project version strings
 
 extra:
