Make `license` `CC0-1.0` & package license file
https://github.com/python-versioneer/python-versioneer/commit/abc79a7b9a2ba1a25bb4a78a55c944c6ce98d516

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -35,7 +35,8 @@ test:
 
 about:
   home: https://github.com/python-versioneer/python-versioneer
-  license: LicenseRef-Public-Domain
+  license: CC0-1.0
+  license_file: LICENSE
   summary: Easy VCS-based management of project version strings
 
 extra:
