--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,7 +13,7 @@ source:
 
 build:
   noarch: python
-  number: 0
+  number: 1
   script: {{ PYTHON }} -m pip install . --no-deps -vv
   entry_points:
     - versioneer = versioneer:main
@@ -35,7 +35,7 @@ test:
 
 about:
   home: https://github.com/python-versioneer/python-versioneer
-  license: CC0-1.0
+  license: Unlicense
   license_file: LICENSE
   summary: Easy VCS-based management of project version strings
 
